.data/projects/darklua-0.17.2/src/nodes/expressions/snapshots/darklua_core__nodes__expressions__test__expression_from_floats__f32_0_5.snap
---
source: src/nodes/expressions/mod.rs
expression: result
---
Number(
    Decimal(
        DecimalNumber {
            float: 0.5,
            exponent: None,
            token: None,
        },
    ),
)
