.data/projects/darklua-0.17.2/src/nodes/expressions/snapshots/darklua_core__nodes__expressions__test__expression_from_floats__f64_1_2345e50.snap
---
source: src/nodes/expressions/mod.rs
expression: result
---
Number(
    Decimal(
        DecimalNumber {
            float: 1.2345e50,
            exponent: Some(
                (
                    46,
                    true,
                ),
            ),
            token: None,
        },
    ),
)
