.data/projects/darklua-0.17.2/src/nodes/expressions/snapshots/darklua_core__nodes__expressions__test__expression_from_floats__f64_nan.snap
---
source: src/nodes/expressions/mod.rs
expression: result
---
Binary(
    BinaryExpression {
        operator: Slash,
        left: Number(
            Decimal(
                DecimalNumber {
                    float: 0.0,
                    exponent: None,
                    token: None,
                },
            ),
        ),
        right: Number(
            Decimal(
                DecimalNumber {
                    float: 0.0,
                    exponent: None,
                    token: None,
                },
            ),
        ),
        token: None,
    },
)
